Somewhat working version

--- a/Acourse/src/app/account/account.component.html
+++ b/Acourse/src/app/account/account.component.html
@@ -46,7 +46,7 @@
         </label>
   
   
-        <button class="submitBtn" (click)=addFile()>Submit</button>
+        <button class="submitBtn" (click)=addFile() (contextmenu)="updateCourse($event)">Submit</button>
   
       </fieldset>
     </form>
