--- a/Acourse/src/app/main-header/main-header.component.html
+++ b/Acourse/src/app/main-header/main-header.component.html
@@ -2,9 +2,9 @@
     <nav class="navbar">
         <h4 class="logo">Acourse</h4>
         <ul>
-            <li><a class="active" routerLink="main">Home</a></li>
-            <li><a routerLink="login">Sign In</a></li>
-            <li><a routerLink="register">Register</a></li>
+            <li><a class="active" routerLink="/main">Home</a></li>
+            <li><a routerLink="/login">Sign In</a></li>
+            <li><a routerLink="/register">Register</a></li>
         </ul>
     </nav>
 </div>
@@ -13,9 +13,9 @@
     <nav class="navbar">
         <h4 class="logo">Acourse</h4>
         <ul>
-            <li><a class="active" routerLink="main">Home</a></li>
-            <li><a routerLink="courses">Courses</a></li>
-            <li><a routerLink="account">Account</a></li>
+            <li><a class="active" routerLink="/main">Home</a></li>
+            <li><a routerLink="/courses">Courses</a></li>
+            <li><a routerLink="/account">Account</a></li>
         </ul>
     </nav>
 </div>  
