--- a/Acourse/src/app/file-pdf/file-pdf.component.html
+++ b/Acourse/src/app/file-pdf/file-pdf.component.html
@@ -1,13 +1,13 @@
-<!-- <div *ngIf="file">
+<div *ngIf="filename">
 
 
     <label>
       Change file name:
-      <input [(ngModel)]="file.name" placeholder=" Type file name" />
+      <input [(ngModel)]="filename" placeholder=" Type file name" />
     </label>
   
   
     <ngx-extended-pdf-viewer src="https://acourse.free.beeceptor.com/media/files/lab_6.pdf" useBrowserLocale="true" height="120vh"></ngx-extended-pdf-viewer>
   </div>
   
-  <button (click)="goBack()">Go back</button> -->
+  <button (click)="goBack()">Go back</button>
